--- a/source/sass/blocks/photo-doubts.scss
+++ b/source/sass/blocks/photo-doubts.scss
@@ -264,11 +264,11 @@
   }
 
   .photo-doubts__progress-bar {
-    width: 800px;
+    width: 100%;
   }
 
   .photo-doubts__controls {
-    width: 800px;
+    width: 66%;
   }
 
   .photo-doubts {
